tests/final/expect/13__ir_reject_parser_recovery_ternary_missing_colon_then_pointer_plus_pointer.diag
Diagnostics:
Error at (8:18): Operator '+' requires pointer arithmetic (pointer +/- integer)
   Spelling: /Users/calebsv/Desktop/CodeWork/fisiCs/tests/final/cases/13__ir_reject_parser_recovery_ternary_missing_colon_then_pointer_plus_pointer.c:8:18
