tests/final/expect/13__ir_reject_parser_recovery_ternary_missing_colon_then_pointer_plus_pointer.pdiag
ParserDiagnostics:
code=1000 line=3 column=27 length=1 kind=0
code=1000 line=3 column=27 length=1 kind=0
code=1001 line=3 column=27 length=1 kind=0
